# shiokobu

./: LICENSE  README.md  pyproject.toml
shiokobu/: __init__.py  mecab.py
